# ClusterAnalyzer

./: .gitignore  ClusterAnalyzerDemo.ipynb  Cluster_Analyzer_Demo.ipynb  MANIFEST.in  README.md  plvalues_O=10_size=500.csv  plvalues_loglikelihood.csv  pyproject.toml  requirements.txt
ClusterAnalyzer/: __init__.py  cluster.py  game_of_life.py
ClusterAnalyzer/__pycache__/: statistical_analysis.compute_quiet_continuous-115.py310.1.nbc  statistical_analysis.compute_quiet_continuous-115.py310.nbi
Paper_Data/: _Data_Display.ipynb
Paper_Data/FigureData/: Fig10_data.csv  Fig12_data.csv  Fig12_data_inset.csv  Fig13_data.csv  Fig16_data.csv  Fig2_data.csv  Fig3e_11_data.csv  Fig4b_4c_4d_data.csv  Fig6_data.csv
src/percolation/: leath_alexandrowicz.py
