[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lgol"
version = "0.0.1"
description = "A library to analyze critical behavior, self-similarity, and fractal dimension of clusters in cellular automata."
authors = [
    {name = "Hakan Akgün", email = "hakan.akgun@ug.bilkent.edu.tr"}
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]
dependencies = [
    "numba",
    "powerlaw",
    "sympy"
]

[project.urls]
Homepage = "https://github.com/HakanAkgn/ClusterAnalyzer"
"Bug Tracker" = "https://github.com/HakanAkgn/ClusterAnalyzer/issues"